# p-chat

./: .dockerignore  .gitignore  README.md  TASK_conversations_in_tab  TASK_img_upload.md  makefile  manage.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
app/: globals.css  layout.tsx  page.tsx
app/[slug]/: layout.tsx  page.tsx
app/components/: ChatContainer.tsx  ChatHeader.tsx  ChatInput.tsx  ChatMessage.tsx  ChatMessages.tsx  ConversationsSidebar.tsx  LoadingIndicator.tsx  index.ts
app/contexts/: ConversationLoadingContext.tsx
app/hooks/: useChat.hook.ts  useConversationChat.hook.ts  useConversationMessages.hook.ts  useConversations.hook.ts  useConversationsSidebar.hook.ts  useCreateConversation.hook.ts  useDeleteConversation.hook.ts  useGetConversation.hook.ts  useLoadingScreen.hook.ts  usePDFList.hook.ts  usePDFUpload.hook.ts  usePostPrompt.hook.ts  useQuiz.hook.ts  useQuizGeneration.hook.ts  useQuizList.hook.ts  useSimpleConversationChat.hook.ts
app/pdf-quiz/: page.tsx
app/providers/: GlobalStateProvider.tsx  TanstackQueryClientProvider.tsx
app/schema/: apiClient.ts  schema.d.ts
app/types/: chat.ts  conversations.ts  pdf.ts
app/utils/: cn.ts
docker/local/: docker-compose.local.yml  dockerfile.local
docker/prod/: docker-compose.prod.yml  (+1 more)
src/: db.sqlite3
tasks/: TASK_1_PDF_UPLOAD_SCRAPING_QUIZ_GENERATION.md  TASK_conversation_crud_endpoints.md  TASK_conversation_management_hooks.md  TASK_conversations_in_tab.md  TASK_frontend_conversations_hook.md  TASK_model_selection_frontend_component.md  TASK_quiz_generation_endpoint.md
(+38 files in other folders)
