[project]
name = "project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.5",
    "psycopg2-binary>=2.9.9",
    "redis>=5.2.1",
    "gunicorn>=23.0.0",
    "python-decouple>=3.8",
    "django-cors-headers>=4.6.0",
    "djangorestframework>=3.15.2",
    "pillow>=11.0.0",
]
